z-index problem fixed on index.html file

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ h3 {
 #title {
     background-color: #ff4c68;
     color: white;
-    
 }
 
 
@@ -62,6 +61,9 @@ h3 {
 
 /* features secton */
 
+.featuresdiv{
+    background-color: #fff;
+}
 .biggerfont {
     /* font-size: 50px; */
     color: #ef8172;
@@ -83,17 +85,18 @@ h3 {
 
 /* title image */
 .title-image {
-    width: 60%;
+    width: 20%;
     transform: rotate(25deg);
-    position:relative;
-    z-index: 1;
+    position:absolute;
+
 }
 
 #features {
-    margin: 7% 15%;
+    margin: 0% 15;
+    padding-top: 5%;
     background-color: #fff;
     position: relative;
-    z-index: 2;
+    z-index: 1;
 
 }
 
